--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </p>
                      <p> 
                      i,m a web Designer with extensive experience of 1 year. my expertise is to
-                     create and design website, graphic design, and more more...
+                     create and design website, graphic design, and more...
                     </p>
                     <a href="#contact" class="btn">Hire me</a> 
                 </div>
@@ -186,7 +186,7 @@
                         <i class="fa fa-box"></i>2022-march--April
                     </h3>
                     <h4 class="timline-title"> CODEKAD KENYA</h4>
-                    <p class="timline-text">I take Attachment of 3 months in Codekad Kenya AS web-developer in WORDPRESS.
+                    <p class="timline-text">I took Attachment of 3 months in Codekad Kenya AS web-developer using WORDPRESS.
                     </p>
                 </div>
                 <div class="timline-item">
@@ -288,7 +288,7 @@
 <div class="contact-info">
         <h2>Contact</h2>
         <h3 class="contact-title1">Have any question, Please Call.</h3>
-        <h4 class="contact-sub-title1">I,M VERY RESPOSIVE TO MESSAGES</h4>
+        <h4 class="contact-sub-title1">I,M VERY RESPONSIVE TO MESSAGES</h4>
     <div class="info">
     <div class="contact-info-items">
         <div class="icon"><i class="fa fa-phone"></i></div>
@@ -311,7 +311,7 @@
 </div>
 <!------contact form-->
 <h3 class="contact-title1">SEND ME AN EMAIL</h3>
-<h4 class="contact-sub-title1">I,M VERY RESPOSIVE TO MESSAGES</h4>
+<h4 class="contact-sub-title1">I,M VERY RESPONSIVE TO MESSAGES</h4>
     <div class="contact-form padd-15">
         <div class="form-item col-6 padd-15">
             <div class="form-group">
