--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </p>
                     <p> 
                       i,m a web Designer with extensive experience of 1 year. my expertise is to
-                       create and design website, graphic design, and more more...
+                       create and design website, graphic design, and  more...
                     </p>
                     <div class="info-item padd-15">
                         <p>Birthday:<span>1 june 1996</span></p>
