--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 </div>
 <div class="portfolio-heading padd-15">
     <h3 style="padding-top: 5px;">Land Registry System</h3>
-    <img src="images/Capture.PNG" alt="">
+    <img src="images/land.PNG" alt="">
 </div>
 </div>
 </section>
