--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 <div class="portfolio-heading padd-15">
     <br>
     <h3 style="padding-top: 5px;">OrkonyilWelfare website</h3>
-    <img src="images/Capture.PNG" alt="">
+    <img src="images/Capture1.PNG" alt="">
 </div>
 <div class="portfolio-heading padd-15">
     <h3 style="padding-top: 5px;">Land Registry System</h3>
