--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     in software Engineering.
                     </p>
                      <p> 
-                     i,m a web Designer with extensive experience of 1 year. my expertise is to
+                     i,m a web Designer with extensive experience of 2 year. my expertise is to
                      create and design website, graphic design, and more...
                     </p>
-                    <a href="#contact" class="btn">Hire me</a> 
+                    <a href="+254715465463" class="btn">Hire me</a> 
                 </div>
                 <div class="home-img padd-15">
                     <img src="images/img1.jpg" alt="Enineer Peter Muntere" style="height: 500px; width: 100%" class="home-img">
@@ -68,7 +68,7 @@
                        create and design website, graphic design, and  more...
                     </p>
                     <div class="info-item padd-15">
-                        <p>Birthday:<span>1 june 1996</span></p>
+                        <p>Birthday:<span>1 june 1998</span></p>
                     </div>
                     <div class="info-item padd-15">
                         <p>Age:<span>26 years</span></p>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="buttons padd-15">
                         <a href="RESUME.pdf" class="btn">Download CV</a>
-                        <a href="#contact" class="btn hire-me">Hire Me</a>
+                        <a href="+254715465463" class="btn hire-me">Hire Me</a>
                     </div>
                 <div class="skill">
                     <div class="skill-item padd-15">
@@ -141,7 +141,7 @@
                 <h4 class="timline-title">DEGREE IN SOFTWARE ENGINEERING</h4>
                 <p class="timline-text">In the University of Eastern Africa Baraton, between the year
                     August 2018 to August 2022 I study the full course in Bachelor of Science in software Engineering.
-                    I graduated with Second Class Owner.
+                    I graduated with Second Class Honours.
                 </p>
             </div>
             <div class="timline-item">
