--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         <p>City:<span>Nairobi</span></p>
                     </div>
                     <div class="info-item padd-15">
-                        <p>Freelnace:<span>Available</span></p>
+                        <p>Freelance:<span>Available</span></p>
                     </div>
                     <div class="buttons padd-15">
-                        <a href="RESUME.pdf" class="btn">Download CV</a>
+                        <a href="CV_2024062511503339.pdf" class="btn">Download CV</a>
                         <a href="+254715465463" class="btn hire-me">Hire Me</a>
                     </div>
                 <div class="skill">
