--- a/index.html
+++ b/index.html
@@ -38,13 +38,9 @@
             <section class="home" id="home">
                 <div class="home-info padd-15">
                     <h2>HELLO?</h2>
-                    <p>My name is peter olobulu Muntere, from Narok county, Loita Ward. I 
-                     graduated from University of eastern Africa Baraton with a Bachelors Degree
-                    in software Engineering.
-                    </p>
+                    <p>"My name is Peter Olobulu Muntere, from Loita Ward in Narok County. I graduated from the University of Eastern Africa, Baraton, with a Bachelor's Degree in Software Engineering."</p>
                      <p> 
-                     i,m a web Designer with extensive experience of 2 year. my expertise is to
-                     create and design website, graphic design, and more...
+                    "I'm a website and system developer with two years of extensive experience. My expertise includes creating and designing websites, developing systems, graphic design, and more."
                     </p>
                     <a href="+254715465463" class="btn">Hire me</a> 
                 </div>
@@ -59,9 +55,9 @@
             <section class="abouts" id="about">
                 <div class="about-info padd-15">
                     <h2>About me</h2>
-                    <p>My name is peter olobulu Muntere, from Narok county, Loita Ward. I 
-                       graduated from University of eastern Africa Baraton with a Bachelors Degree
-                       in software Engineering.
+                    <p>
+                       I,m a website and system developer with a Bachelor's Degree in Software Engineering from the University of Eastern Africa, Baraton. With over two years of experience in web design, system development, and graphic design, specializing in creating
+                        user-friendly, responsive, and visually appealing digital solutions. Passionate about turning ideas into functional and efficient projects, while continuously expanding expertise in the ever-evolving tech industry.
                     </p>
                     <p> 
                       i,m a web Designer with extensive experience of 1 year. my expertise is to
@@ -86,10 +82,10 @@
                         <p>City:<span>Nairobi</span></p>
                     </div>
                     <div class="info-item padd-15">
-                        <p>Freelance:<span>Available</span></p>
+                        <p>Freelance:<span>web and system developer.</span></p>
                     </div>
                     <div class="buttons padd-15">
-                        <a href="CV_2024062511503339.pdf" class="btn">Download CV</a>
+                        <a href="#" class="btn">Download CV</a>
                         <a href="+254715465463" class="btn hire-me">Hire Me</a>
                     </div>
                 <div class="skill">
@@ -140,8 +136,8 @@
                 <i class="fa fa-box"></i>2018 - 2022</h3>
                 <h4 class="timline-title">DEGREE IN SOFTWARE ENGINEERING</h4>
                 <p class="timline-text">In the University of Eastern Africa Baraton, between the year
-                    August 2018 to August 2022 I study the full course in Bachelor of Science in software Engineering.
-                    I graduated with Second Class Honours.
+                    August 2018 to August 2022 I study the full course in Bachelor's of Science in software Engineering.
+                    I graduated with Second Class Honors.
                 </p>
             </div>
             <div class="timline-item">
