--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@
 </div>
 <div class="portfolio-heading padd-15">
     <br>
-    <h3 style="padding-top: 5px;">OrkonyilWelfare website</h3>
-    <img src="images/Capture1.PNG" alt="">
+    <h3 style="padding-top: 5px;">Ministry Of foreign Inventory System</h3>
+    <img src="images/Pro1" alt="">
 </div>
 <div class="portfolio-heading padd-15">
-    <h3 style="padding-top: 5px;">Land Registry System</h3>
-    <img src="images/land.PNG" alt="">
+    <h3 style="padding-top: 5px;">VisitorOn Application</h3>
+    <img src="images/Pro2" alt="">
 </div>
 </div>
 </section>
