--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
 <div class="portfolio-heading padd-15">
     <br>
     <h3 style="padding-top: 5px;">Ministry Of foreign Inventory System</h3>
-    <img src="images/Pro1" alt="">
+    <img src="images/pro1.jpg" alt="">
 </div>
 <div class="portfolio-heading padd-15">
     <h3 style="padding-top: 5px;">VisitorOn Application</h3>
-    <img src="images/Pro2" alt="">
+    <img src="images/pro2.jpg" alt="">
 </div>
 </div>
 </section>
